Swarun: Changed website

--- a/people.html
+++ b/people.html
@@ -174,7 +174,7 @@
  																										<img src="images/Jingxian.jpg" alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
  																								 <figcaption> Jingxian Wang </figcaption> </figure>
 
--->
+
 
      <a href="https://vaibhavsingh96.github.io/"> <figure> <img src="images/Vaibhav.jpg"
                                                    alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
@@ -195,6 +195,8 @@
                                                    alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
 																								    <figcaption>Atul Bansal</a><br><div style="margin-bottom:10px">Co-advised by Prof. Bob Iannucci</div></figcaption> </figure>
 
+-->
+
      <a href="https://gavinsyw.github.io/"> <figure> <img src="images/Yiwen.jpg"
                                                    alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
 																								    <figcaption>Yiwen Song</a><br></figcaption> </figure>
@@ -214,6 +216,32 @@
 
 
 																								 </a>
+
+
+											     <a href="https://www.linkedin.com/in/veronicamuriga/"> <figure> <img src="images/Veronica.png"
+                                                   alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
+																								    <figcaption>Veronica Muriga</a><br><div style="margin-bottom:10px">Co-advised by Prof. Akshitha Sriraman and Dr. Assane Gueye</div><br></figcaption> </figure>
+
+
+																								 </a>
+
+											     <a href="https://zjendex.github.io/"> <figure> <img src="images/Jiangyifei.png"
+                                                   alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
+																								    <figcaption>Jiangyifei Zhu</a><br><div style="margin-bottom:10px">Co-advised by Prof. Justin Chan</div><br></figcaption> </figure>
+
+
+																								 </a>
+
+
+											     <a href="https://freddyliu06.github.io/"> <figure> <img src="images/Freddy.png"
+                                                   alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
+																								    <figcaption>Freddy Liu</a><br><div style="margin-bottom:10px">Co-advised by Prof. Justin Chan</div><br></figcaption> </figure>
+
+
+																								 </a>
+
+
+
 												 </center>
 											</p>
 											<p>
@@ -221,7 +249,7 @@
 										</section>
 <section>
 											<header>
-												<h2>Postdoctoral Researchers</h2>
+												<h2>Postdoctoral Alumni</h2>
 											<p>
 												<center>
                                                 <a href="http://www.winlab.rutgers.edu/~mibrahim/">
@@ -258,6 +286,29 @@
  																										<img src="images/Jingxian.jpg" alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
  																								 <figcaption> Jingxian Wang </figcaption> </figure>
 
+
+
+
+     <a href="https://vaibhavsingh96.github.io/"> <figure> <img src="images/Vaibhav.jpg"
+                                                   alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
+																								    <figcaption>Vaibhav Singh</a><br><div style="margin-bottom:10px">Co-advised by Prof. Osman Ya&gbreve;an</div></figcaption> </figure>
+
+
+     <a href="http://www.andrew.cmu.edu/user/aprabhak/"> <figure> <img src="images/Akarsh.jpg"
+                                                   alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
+																								    <figcaption>Akarsh Prabhakara</a><br><div style="margin-bottom:10px">Co-advised by Prof. Anthony Rowe</div></figcaption> </figure>
+
+
+     <a href="http://www.andrew.cmu.edu/user/junboz2/"> <figure> <img src="images/Junbo.jpg"
+                                                   alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
+																								    <figcaption>Junbo Zhang</a><br><div style="margin-bottom:10px"></div></figcaption> </figure>
+
+
+     <a href="https://atul-bansal.github.io/"> <figure> <img src="images/Atul.jpg"
+                                                   alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
+																								    <figcaption>Atul Bansal</a><br><div style="margin-bottom:10px">Co-advised by Prof. Bob Iannucci</div></figcaption> </figure>
+
+
 </center>
 </header>
 </section>
@@ -291,51 +342,53 @@
 																								 <figcaption> Junsu Jang </figcaption></figure></a>
                                         </center>
 											</p>
-										</section>
+									<!--	</section>
 										-->
-                                        <section>
-											<header>
-												<h2>Summer Interns</h2>
-											</header>
+                                       <!-- <section>
 
-                                            <p>
-                                                Summer 2021 Interns:
-                                                <ul><li>Riddhiman Lahiri</li>
-                                                <li>Diksha Agarwal</li>
-                                                </ul>
-                                            </p>
 
-											<p>
-                                                Summer 2019 Interns:
-												<center>
-                                                <a href="#"> <img src="images/summer2019.jpg"
-                                                   alt="" style="width:400px;height:300px;border: #FFFFFF 4px solid"/></a>
-                                                <div>Ke Li, Milind Srivastava and Yash Jain</div>
-                                                </center>
-											</p>
-	<p>
-                                                Summer 2018 Interns:
-												<center>
-                                                <a href="#"> <img src="images/summer2018.jpg"
-                                                   alt="" style="width:400px;height:300px;border: #FFFFFF 4px solid"/></a>
-                                                <div>Rajarshi Saha and Junbo Zhang</div>
-                                                </center>
-											</p>
-											<p>
-                                                Summer 2017 Interns:
-												<center>
-                                                <a href="#"> <img src="images/Summer2017Interns.jpg"
-                                                   alt="" style="width:400px;height:400px;border: #FFFFFF 4px solid"/></a>
-                                                <div><a href = "http://www.yangzhijian.me">Zhijian Yang</a>, <a href="http://www.nan-zhou.com">Nan Zhou</a>, <a href="www.linkedin.com/in/junsujang">Junsu Jang</a>, and Atul Bansal</div>
-                                                </center>
-											</p>
-                                            <p>
-                                                Summer 2016 Interns:
-                                                <ul><li>Zijian Chen</li>
-                                                <li>Zhenyu Song</li>
-                                                <li>Raghav Sonavane</li>
-                                                </ul>
-                                            </p>
+	<!-- 										<header>
+	<!-- 											<h2>Summer Interns</h2>
+	<!-- 										</header>
+
+        <!--                                     <p>
+        <!--                                         Summer 2021 Interns:
+        <!--                                         <ul><li>Riddhiman Lahiri</li>
+        <!--                                         <li>Diksha Agarwal</li>
+        <!--                                         </ul>
+        <!--                                     </p>
+
+	<!-- 										<p>
+        <!--                                         Summer 2019 Interns:
+	<!-- 											<center>
+        <!--                                         <a href="#"> <img src="images/summer2019.jpg"
+        <!--                                            alt="" style="width:400px;height:300px;border: #FFFFFF 4px solid"/></a>
+        <!--                                         <div>Ke Li, Milind Srivastava and Yash Jain</div>
+        <!--                                         </center>
+	<!-- 										</p>
+	<!-- <p>
+        <!--                                         Summer 2018 Interns:
+	<!-- 											<center>
+        <!--                                         <a href="#"> <img src="images/summer2018.jpg"
+        <!--                                            alt="" style="width:400px;height:300px;border: #FFFFFF 4px solid"/></a>
+        <!--                                         <div>Rajarshi Saha and Junbo Zhang</div>
+        <!--                                         </center>
+	<!-- 										</p>
+	<!-- 										<p>
+        <!--                                         Summer 2017 Interns:
+	<!-- 											<center>
+        <!--                                         <a href="#"> <img src="images/Summer2017Interns.jpg"
+        <!--                                            alt="" style="width:400px;height:400px;border: #FFFFFF 4px solid"/></a>
+        <!--                                         <div><a href = "http://www.yangzhijian.me">Zhijian Yang</a>, <a href="http://www.nan-zhou.com">Nan Zhou</a>, <a href="www.linkedin.com/in/junsujang">Junsu Jang</a>, and Atul Bansal</div>
+        <!--                                         </center>
+	<!-- 										</p>
+        <!--                                     <p>
+        <!--                                         Summer 2016 Interns:
+        <!--                                         <ul><li>Zijian Chen</li>
+        <!--                                         <li>Zhenyu Song</li>
+        <!--                                         <li>Raghav Sonavane</li>
+        <!--                                         </ul>
+        <!--                                     </p> -->
 
 
 										</section>
