Swarun: Changed website

--- a/ice.html
+++ b/ice.html
@@ -160,7 +160,7 @@ In this work, we investigate spreading processes that entail evolutionary adapta
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>The Interplay of Clustering and Evolution in the Emergence of Epidemics on Networks</strong>, Mansi Sood, Rashad Eletreby, Swarun Kumar, Chai Wah Wu, Osman Yagan, ICC 2023<br /><br />
+<li> <strong>The Interplay of Clustering and Evolution in the Emergence of Epidemics on Networks</strong>, Mansi Sood, Rashad Eletreby, Swarun Kumar, Chai Wah Wu, Osman Yagan, ICC 2023 [<a href="papers/ice-icc2023.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
