--- a/openspace.html
+++ b/openspace.html
@@ -160,7 +160,7 @@ In this paper, we first discuss why the satellite Internet world is ripe for mon
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>A Roadmap for the Democratization of Space-Based Communications</strong>, Veronica Muriga, Swarun Kumar, Akshitha Sriraman and Assane Gueye, HotNets 2024<br /><br />
+<li> <strong>A Roadmap for the Democratization of Space-Based Communications</strong>, Veronica Muriga, Swarun Kumar, Akshitha Sriraman and Assane Gueye, HotNets 2024 [<a href="papers/openspace-hotnets2024.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
