--- a/radarhd.html
+++ b/radarhd.html
@@ -165,7 +165,7 @@ This paper explores a machine learning approach on data from a single-chip mmWav
 </section><section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>High Resolution Point Clouds from mmWave Radar</strong>, Akarsh Prabhakara, Tao Jin, Arnav Das, Gantavya Bhatt, Lilly Kumari, Elahe Soltanaghai, Jeff Bilmes, Swarun Kumar and Anthony Rowe, ICRA 2023<br /><br />
+<li> <strong>High Resolution Point Clouds from mmWave Radar</strong>, Akarsh Prabhakara, Tao Jin, Arnav Das, Gantavya Bhatt, Lilly Kumari, Elahe Soltanaghai, Jeff Bilmes, Swarun Kumar and Anthony Rowe, ICRA 2023 [<a href="papers/radarhd-icra2023.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
