--- a/rfimap.html
+++ b/rfimap.html
@@ -160,7 +160,7 @@ This paper introduces RFIMap, a system that aims to inexpensively characterize t
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Battery-free Wideband Spectrum Mapping using Commodity RFID Tags</strong>, Mohamed Ibrahim, Atul Bansal, Kuang Yuan, Swarun Kumar and Peter Steenkiste, MobiCom 2023<br /><br />
+<li> <strong>Battery-free Wideband Spectrum Mapping using Commodity RFID Tags</strong>, Mohamed Ibrahim, Atul Bansal, Kuang Yuan, Swarun Kumar and Peter Steenkiste, MobiCom 2023 [<a href="papers/rfimap-mobicom2023.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
