--- a/viton.html
+++ b/viton.html
@@ -160,7 +160,7 @@ Liquid-metal embedded elastomers (LMEEs) have been demonstrated to show a variet
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Thermo-Mechanically Stable, Liquid Metal Embedded Soft Materials for High-Temperature Applications</strong>, Robert Herbert, Piotr Mocny, Yuqi Zhao, Ting-Chih Lin, Junbo Zhang, Michael Vinciguerra, Sunny Surprenant, Wui Yarn Daphne Chan, Swarun Kumar, Michael R. Bockstaller, Krzysztof Matyjaszewski, Carmel Majidi, Advanced Functional Materials 2024<br /><br />
+<li> <strong>Thermo-Mechanically Stable, Liquid Metal Embedded Soft Materials for High-Temperature Applications</strong>, Robert Herbert, Piotr Mocny, Yuqi Zhao, Ting-Chih Lin, Junbo Zhang, Michael Vinciguerra, Sunny Surprenant, Wui Yarn Daphne Chan, Swarun Kumar, Michael R. Bockstaller, Krzysztof Matyjaszewski, Carmel Majidi, Advanced Functional Materials 2024 [<a href="papers/viton-materials2024.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
