--- a/waser.html
+++ b/waser.html
@@ -160,7 +160,7 @@ We present WASER, a novel RF-based heating platform that allows electronics-free
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Wireless Actuation for Soft Electronics-free Robots</strong>, Jingxian Wang, Yiwen Song, Mason Zadan, Yuyi Shen, Vanessa Chen, Carmel Majidi and Swarun Kumar, MobiCom 2023<br /><br />
+<li> <strong>Wireless Actuation for Soft Electronics-free Robots</strong>, Jingxian Wang, Yiwen Song, Mason Zadan, Yuyi Shen, Vanessa Chen, Carmel Majidi and Swarun Kumar, MobiCom 2023 [<a href="papers/waser-mobicom2023.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
