--- a/avatars.html
+++ b/avatars.html
@@ -160,7 +160,7 @@ Rendezvous with sperm whales for biological observations is made challenging by 
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Reinforcement learning–based framework for whale rendezvous via autonomous sensing robots</strong>, Nishant Mehrotra, Divyanshu Pandey, Ashutosh Sabharwal, Akarsh Prabhakara, Yawen Liu and Swarun Kumar, Science Robotics 2024<br /><br />
+<li> <strong>Reinforcement learning–based framework for whale rendezvous via autonomous sensing robots</strong>, Nishant Mehrotra, Divyanshu Pandey, Ashutosh Sabharwal, Akarsh Prabhakara, Yawen Liu and Swarun Kumar, Science Robotics 2024 [<a href="papers/avatars-robotics2024.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
