--- a/hydra.html
+++ b/hydra.html
@@ -160,7 +160,7 @@ In this paper, we ask, “Can millimeter-wave (mmWave) radars sense objects not 
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Hydra: Exploiting Multi-Bounce Scattering for Beyond-Field-of-View mmWave Radar</strong>, Nishant Mehrotra, Divyanshu Pandey, Ashutosh Sabharwal, Akarsh Prabhakara, Yawen Liu and Swarun Kumar, MobiCom 2024<br /><br />
+<li> <strong>Hydra: Exploiting Multi-Bounce Scattering for Beyond-Field-of-View mmWave Radar</strong>, Nishant Mehrotra, Divyanshu Pandey, Ashutosh Sabharwal, Akarsh Prabhakara, Yawen Liu and Swarun Kumar, MobiCom 2024 [<a href="papers/hydra-mobicom2024.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
