--- a/microsurf.html
+++ b/microsurf.html
@@ -160,7 +160,7 @@
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Guiding Energy Distribution inside Microwave Oven</strong>, Yiwen Song, Swarun Kumar, Hao Pan, Longyuan Ge, Yi-Chao Chen, and Lili Qiu, MobiCom 2024<br /><br />
+<li> <strong>Guiding Energy Distribution inside Microwave Oven</strong>, Yiwen Song, Swarun Kumar, Hao Pan, Longyuan Ge, Yi-Chao Chen, and Lili Qiu, MobiCom 2024 [<a href="papers/microsurf-mobicom2024.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
