--- a/nsr.html
+++ b/nsr.html
@@ -160,7 +160,7 @@ This paper presents a novel battery-free soft-robotics platform that can crawl t
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Navigating Soft Robots through Wireless Heating</strong>, Yiwen Song, Mason Zadan, Kushaan Misra, Zefang Li, Jingxian Wang, Carmel Majidi and Swarun Kumar, ICRA 2023<br /><br />
+<li> <strong>Navigating Soft Robots through Wireless Heating</strong>, Yiwen Song, Mason Zadan, Kushaan Misra, Zefang Li, Jingxian Wang, Carmel Majidi and Swarun Kumar, ICRA 2023 [<a href="papers/nsr-icra2023.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
