--- a/pasta.html
+++ b/pasta.html
@@ -160,7 +160,7 @@ Software-defined radios and cognitive radios can switch their operating frequenc
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Pneumatically-Actuated Liquid Metal-Based Frequency Reconfigurable Antenna</strong>, Yiwen Song, Aditya Bharambe, Dinesh K Patel, Barbara Zhuo, Mason Zadan, Carmel Majidi and Swarun Kumar, Advanced Science 2026<br /><br />
+<li> <strong>Pneumatically-Actuated Liquid Metal-Based Frequency Reconfigurable Antenna</strong>, Yiwen Song, Aditya Bharambe, Dinesh K Patel, Barbara Zhuo, Mason Zadan, Carmel Majidi and Swarun Kumar, Advanced Science 2026 [<a href="papers/pasta-science2026.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
