--- a/rfact.html
+++ b/rfact.html
@@ -160,7 +160,7 @@ Soft and miniaturized robots possess the capability to operate inside narrow, co
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Frequency-selective actuation of liquid crystalline elastomer actuators with radio-frequency</strong>, Yiwen Song, Zefang Li, Mason Zadan, Jingxian Wang, Swarun Kumar, Carmel Majidi, Nature Communications 2025<br /><br />
+<li> <strong>Frequency-selective actuation of liquid crystalline elastomer actuators with radio-frequency</strong>, Yiwen Song, Zefang Li, Mason Zadan, Jingxian Wang, Swarun Kumar, Carmel Majidi, Nature Communications 2025 [<a href="papers/rfact-communications2025.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
