--- a/scaled.html
+++ b/scaled.html
@@ -160,7 +160,7 @@ We propose SCALED, an architecture that extends the energyharvesting range of ul
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Towards Ubiquitous IoT through Long Range Wireless Energy Harvesting</strong>, Mohamed Ibrahim, Atul Bansal, Kuang Yuan, Junbo Zhang, and Swarun Kumar, MobiHoc 2024<br /><br />
+<li> <strong>Towards Ubiquitous IoT through Long Range Wireless Energy Harvesting</strong>, Mohamed Ibrahim, Atul Bansal, Kuang Yuan, Junbo Zhang, and Swarun Kumar, MobiHoc 2024 [<a href="papers/scaled-mobihoc2024.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
