--- a/tranquil.html
+++ b/tranquil.html
@@ -160,7 +160,7 @@ We present TranQuiL, a novel long-range detection and localization system that c
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>TranQuiL: Long Range Detection and Localization of RFI in Radio Quiet Zones</strong>, Atul Bansal,  Mohamed Ibrahim, Kuang Yuan,  Yiwen Song, Swarun Kumar and Bob Iannucci, RFI (Oral) 2024<br /><br />
+<li> <strong>TranQuiL: Long Range Detection and Localization of RFI in Radio Quiet Zones</strong>, Atul Bansal,  Mohamed Ibrahim, Kuang Yuan,  Yiwen Song, Swarun Kumar and Bob Iannucci, Radio Science 2026 [<a href="papers/tranquil-science2026.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
