--- a/vista.html
+++ b/vista.html
@@ -160,7 +160,7 @@
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Adapting LoRa Ground Stations for Low-latency Imaging and Inference from LoRa-enabled CubeSats</strong>, Akshay Gadre, Zachary Machester, and Swarun Kumar, ACM ToSN 2024<br /><br />
+<li> <strong>Adapting LoRa Ground Stations for Low-latency Imaging and Inference from LoRa-enabled CubeSats</strong>, Akshay Gadre, Zachary Machester, and Swarun Kumar, ACM ToSN 2024 [<a href="papers/vista-tosn2024.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
