--- a/winddancer.html
+++ b/winddancer.html
@@ -160,7 +160,7 @@ Acoustic sensing has recently garnered significant interest for a wide range of 
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>WindDancer: Understanding Acoustic Sensing under Ambient Airflow</strong>, Kuang Yuan, Dong Li, Hao Zhou, Zhehao Li, Lili Qiu, Swarun Kumar and Jie Xiong, IMWUT 2025<br /><br />
+<li> <strong>WindDancer: Understanding Acoustic Sensing under Ambient Airflow</strong>, Kuang Yuan, Dong Li, Hao Zhou, Zhehao Li, Lili Qiu, Swarun Kumar and Jie Xiong, IMWUT 2025 [<a href="papers/winddancer-imwut2025.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
