Swarun: Changed website

--- a/fastloc.html
+++ b/fastloc.html
@@ -160,7 +160,7 @@ We propose and demonstrate FastLoc, a precision tracking system that locates tin
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Ultra Low-Latency Backscatter for Fast-moving Location Tracking</strong>, Jingxian Wang, Vaishnavi Ranganathan, Jonathan Lester and Swarun Kumar, UbiComp 2022<br /><br />
+<li> <strong>Ultra Low-Latency Backscatter for Fast-moving Location Tracking</strong>, Jingxian Wang, Vaishnavi Ranganathan, Jonathan Lester and Swarun Kumar, UbiComp 2022 [<a href="papers/fastloc-ubicomp2022.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
