--- a/osprey.html
+++ b/osprey.html
@@ -165,7 +165,7 @@ Tire wear affects safety and performance of automobiles. Past solutions are eith
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
 <li> <strong>Osprey: A mmWave Approach to Tire Wear Sensing</strong>, Akarsh Prabhakara, Vaibhav Singh, Swarun Kumar and Anthony Rowe, MobiSys  2020 <em>(Best Paper Honorable Mention)</em> [<a href="papers/osprey-mobisys2020.pdf">PAPER</a>] [<a href="slides/osprey-mobisys2020.pptx">SLIDES</a>]<br /><br />
-</li><li> <strong>Osprey Demo: A mmWave Approach to Tire Wear Sensing</strong>, Akarsh Prabhakara, Vaibhav Singh, Swarun Kumar and Anthony Rowe, MobiSys  2020<br /><br />
+</li><li> <strong>Osprey Demo: A mmWave Approach to Tire Wear Sensing</strong>, Akarsh Prabhakara, Vaibhav Singh, Swarun Kumar and Anthony Rowe, MobiSys  2020 [<a href="papers/osprey-demo-mobisys2020.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
