--- a/recoil.html
+++ b/recoil.html
@@ -160,7 +160,7 @@ We propose ReCoil, a system that uses wearable passive relays to attack NFC card
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>You foot the bill! Attacking NFC with passive relays</strong>, Yuyi Sun, Swarun Kumar, Shibo He, Jiming Chen and Zhiguo Shi, IEEE IoT Journal 2020<br /><br />
+<li> <strong>You foot the bill! Attacking NFC with passive relays</strong>, Yuyi Sun, Swarun Kumar, Shibo He, Jiming Chen and Zhiguo Shi, IEEE IoT Journal 2020 [<a href="papers/recoil-journal2020.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
