--- a/rfbridge.html
+++ b/rfbridge.html
@@ -160,7 +160,7 @@ This paper proposes a new capability for RF metasurfaces: highly programmable fr
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>RFBridge: Ultra Wideband Reconfigurable Metamaterial Surface Enabling Frequency Conversion</strong>, Yawen Liu, Shivang Aggarwal, Mohamed Ibrahim, Puneet Sharma, and Swarun Kumar, HotMobile 2025<br /><br />
+<li> <strong>RFBridge: Ultra Wideband Reconfigurable Metamaterial Surface Enabling Frequency Conversion</strong>, Yawen Liu, Shivang Aggarwal, Mohamed Ibrahim, Puneet Sharma, and Swarun Kumar, HotMobile 2025 [<a href="papers/rfbridge-hotmobile2025.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
