--- a/security.html
+++ b/security.html
@@ -165,11 +165,11 @@ This project aims to study the security and privacy challenges associated with n
 
 <strong style="margin-left:0px">Publications</h4> </strong><br />
 <ul style="list-style-type: disc; margin-top: 10px; margin-left:40px">
-<li><strong>Exploring the Needs of Users for Supporting Privacy-protective Behavior in Smart Homes</strong>, Haojian Jin, Boyuan Guo, Rituparna Roychoudhury, Yaxing Yao, Swarun Kumar, Yuvraj Agarwal and Jason Hong, CHI  2022 [<a href="ppb.html">WEBSITE</a>]<br /></li>
+<li><strong>Exploring the Needs of Users for Supporting Privacy-protective Behavior in Smart Homes</strong>, Haojian Jin, Boyuan Guo, Rituparna Roychoudhury, Yaxing Yao, Swarun Kumar, Yuvraj Agarwal and Jason Hong, CHI  2022 [<a href="papers/ppb-chi2022.pdf">PAPER</a>] [<a href="ppb.html">WEBSITE</a>]<br /></li>
 <li><strong>Lean Privacy Review: Collecting Users' Privacy Concerns of Data Practices at a Low Cost</strong>, Haojian Jin, Hong Shen, Mayank Jain, Swarun Kumar, and Jason Hong, TOCHI  2021 [<a href="papers/lpr-tochi2021.pdf">PAPER</a>] [<a href="lpr.html">WEBSITE</a>]<br /></li>
-<li><strong>Poster - NoFaceContact: Stop Touching Your Face with NFC</strong>, Junbo Zhang and Swarun Kumar, MobiSys  2020 [<a href="nofacecontact.html">WEBSITE</a>]<br /></li>
+<li><strong>Poster - NoFaceContact: Stop Touching Your Face with NFC</strong>, Junbo Zhang and Swarun Kumar, MobiSys  2020 [<a href="papers/nofacecontact-mobisys2020.pdf">PAPER</a>] [<a href="nofacecontact.html">WEBSITE</a>]<br /></li>
 <li><strong>A Deep Learning Approach to IoT Authentication </strong>, Rajshekhar Das, Akshay Gadre, Shanghang Zhang, Swarun Kumar and Jose Moura, ICC  2018 [<a href="papers/dliot-icc2018.pdf">PAPER</a>] [<a href="dliot.html">WEBSITE</a>]<br /></li>
-<li><strong>Guaranteeing Spoof-Resilient Multi-Robot Networks</strong>, Stephanie Gil (Co-primary), Swarun Kumar (Co-primary), Mark Mazumder, Dina Katabi and Daniela Rus, RSS  2015<br /></li>
+<li><strong>Guaranteeing Spoof-Resilient Multi-Robot Networks</strong>, Stephanie Gil (Co-primary), Swarun Kumar (Co-primary), Mark Mazumder, Dina Katabi and Daniela Rus, RSS  2015 [<a href="papers/robosec-rss2015.pdf">PAPER</a>]<br /></li>
 </ul>
 
 </section>
