--- a/chariot.html
+++ b/chariot.html
@@ -160,7 +160,7 @@ The Internet of Things (IoT) is scaling rapidly to billions of low power devices
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Cross Technology Distributed MIMO for Low Power IoT</strong>, Revathy Narayanan, Swarun Kumar and C. Siva Ram Murthy, IEEE Transactions on Mobile Computing  2020<br /><br />
+<li> <strong>Cross Technology Distributed MIMO for Low Power IoT</strong>, Revathy Narayanan, Swarun Kumar and C. Siva Ram Murthy, IEEE Transactions on Mobile Computing  2020 [<a href="papers/chariot-computing2020.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
