--- a/nofacecontact.html
+++ b/nofacecontact.html
@@ -165,7 +165,7 @@
 </section><section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Poster - NoFaceContact: Stop Touching Your Face with NFC</strong>, Junbo Zhang and Swarun Kumar, MobiSys  2020<br /><br />
+<li> <strong>Poster - NoFaceContact: Stop Touching Your Face with NFC</strong>, Junbo Zhang and Swarun Kumar, MobiSys  2020 [<a href="papers/nofacecontact-mobisys2020.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
