--- a/will.html
+++ b/will.html
@@ -160,7 +160,7 @@ This paper asks if Large Language Models (LLMs) can provide wireless expertise, 
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Can we make FCC Experts out of LLMs?</strong>, Atul Bansal, Veronica Muriga, Jason Li, Lucy Duan and Swarun Kumar, HotMobile 2025<br /><br />
+<li> <strong>Can we make FCC Experts out of LLMs?</strong>, Atul Bansal, Veronica Muriga, Jason Li, Lucy Duan and Swarun Kumar, HotMobile 2025 [<a href="papers/will-hotmobile2025.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
