--- a/wira.html
+++ b/wira.html
@@ -165,7 +165,7 @@
 </section><section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Poster: Does Ambient RF Energy Suffice to Power Battery-free IoT?</strong>, Atul Bansal, Swarun Kumar and Bob Iannucci, MobiSys  2020<br /><br />
+<li> <strong>Poster: Does Ambient RF Energy Suffice to Power Battery-free IoT?</strong>, Atul Bansal, Swarun Kumar and Bob Iannucci, MobiSys  2020 [<a href="papers/wira-mobisys2020.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
