--- a/wiseek.html
+++ b/wiseek.html
@@ -164,8 +164,8 @@ Amazon and Google are piloting delivery drones to transport packages to customer
 </section><section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Adaptive Communication in Multi-Robot Systems Using Directionality of Signal Strength</strong>, Stephanie Gil, Swarun Kumar, Dina Katabi and Daniela Rus, International Symposium on Robotics Research (ISRR)  2013<br /><br />
-</li><li> <strong>Adaptive Communication in Multi-Robot Systems Using Directionality of Signal Strength</strong>, Stephanie Gil, Swarun Kumar, Dina Katabi and Daniela Rus,  2015<br /><br />
+<li> <strong>Adaptive Communication in Multi-Robot Systems Using Directionality of Signal Strength</strong>, Stephanie Gil, Swarun Kumar, Dina Katabi and Daniela Rus, International Symposium on Robotics Research (ISRR)  2013 [<a href="papers/wiseek-(isrr)2013.pdf">PAPER</a>]<br /><br />
+</li><li> <strong>Adaptive Communication in Multi-Robot Systems Using Directionality of Signal Strength</strong>, Stephanie Gil, Swarun Kumar, Dina Katabi and Daniela Rus,  2015 [<a href="papers/wiseek-ijrr-2015.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
