--- a/wsr.html
+++ b/wsr.html
@@ -160,7 +160,7 @@ This paper presents the WiFi-Sensor-for-Robotics (WSR) toolbox, an open source C
 <div class="6u 12u(mobile)"> <section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Toolbox Release: A WiFi-Based Relative Bearing Sensor for Robotics</strong>, Ninad Jadhav, Weiying Wang, Diana Zhang, Swarun Kumar and Stephanie Gil, IROS 2022<br /><br />
+<li> <strong>Toolbox Release: A WiFi-Based Relative Bearing Sensor for Robotics</strong>, Ninad Jadhav, Weiying Wang, Diana Zhang, Swarun Kumar and Stephanie Gil, IROS 2022 [<a href="papers/wsr-iros2022.pdf">PAPER</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
